2011-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* Applied another patch by Murray Stokely providing:
	   - R/internals.R: generalise readProtoFiles() adding 'pattern' arg
	   - man/readProtoFiles.Rd: documenting new 'pattern' argument
	   - src/DescriptorPoolLookup.cpp: enhanced error message
	   - inst/unitTests/runit.golden.message.R: new unit test for
	   repeated fields fixed (which was issue addressed earlier)

2011-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* Applied patch by Murray Stokely providing all the following:
	   - src/S4_classes.h: new 'name' and 'full_name' slots
	   - R/00classes.R: idem
	   - R/wrapper_EnumDescriptor.R: fix typo now permitting function call
	   - src/wrapper_EnumDescriptor.cpp: add a bounds check
	   - src/wrapper_EnumValueDescriptor.cpp: add a new name method
	   - inst/unitTests/runit.enums.R: add new unit test

	* man/EnumValueDescriptor-class.Rd: Add documentation for name
	and full_name

2010-10-20  Dirk Eddelbuettel  <deddelbuettel@wolve.com>

	* inst/doc/Makefile: do not remove the pdf in 'clean'

	* inst/unitTests/runit.addressbook.R: stick 'book' into global env.

2010-10-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.1

	* ChangeLog: moved from inst/
	* inst/NEWS: moved from top-level to that it gets installed with package

2010-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/*: applied patch by Koert Kuipers to support raw bytes
	* inst/unitTests/runit.bytes.R: also added unit test by Koert

2010-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.0

2010-09-10  Romain Francois <romain@r-enthusiasts.com>

	* man/readASCII.Rd: Rd documentation for readASCII

2010-08-20  Romain Francois <romain@r-enthusiasts.com>

	* R/read/.R: New readASCII method

2010-08-12  Romain Francois <romain@r-enthusiasts.com>

	* src/*: restore R CMD check

2010-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.addressbook.R: start of new unit tests
